--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "bully-www",
   "private": true,
   "dependencies": {
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "waypoints": "~4.0.0"
   },
   "devDependencies": {
     "animate.css-scss": "~3.1.0"
